--- a/www/templates/my-stocks.html
+++ b/www/templates/my-stocks.html
@@ -1,7 +1,8 @@
 <ion-view view-title="My Stocks">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="stock in myStocks track by stock.ticker" ng-href="#/app/{{stock.ticker}}">
+      <ion-item ng-repeat="stock in myStocks track by stock.ticker"
+       ng-href="#/app/{{stock.ticker}}">
         <div class="row row-center">
           <div class="col">
             <h3>{{stock.ticker}}</h3>
